# graphics-programming-journey

./: .clang-format  .gitignore  CMakeLists.txt  README.md
01_2D-CPU-Engine/00_boilerplate/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/include/core/: Common.hpp
examples/: CMakeLists.txt
examples/01_HelloWindow/: CMakeLists.txt  main.cpp
examples/02_RedWindow/: CMakeLists.txt  main.cpp
examples/03_Shapes/: CMakeLists.txt  main.cpp
examples/04_bouncingSquare/: CMakeLists.txt  main.cpp
examples/05_collisions/: CMakeLists.txt  README.md  main.cpp
